--- a/ts-todolist/package.json
+++ b/ts-todolist/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-redux": "^7.1.25",
+    "@types/uuid": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
